[package]
name = "tockverif"
version = "0.1.0"
authors = ["Natalie Popescu <nataliepopescu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
list_lib = { path = "../../tock/tock/kernel/src/common/list_lib" } # brittle
