[package]
name = "tockverif"
version = "0.1.0"
authors = ["Natalie Popescu <nataliepopescu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#list_lib = { path = "/Users/np/hack/tock/tock/kernel/src/common/list_lib" } # FIXME brittle

[profile.dev]
opt-level = 3
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
